--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kyoudaievents",
-  "version": "0.1.1",
+  "name": "kyoudaievents-readonly",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.2.0",
